fix margin gap on body

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,6 +10,7 @@ body {
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 0.5fr 1.5fr 0.5fr 1fr;
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 header h1 {
     text-align: center;
@@ -115,16 +116,9 @@ section {
     aside ul {        
         font-family: 'Roboto', sans-serif; 
         padding-left: 1rem;
+        margin: 0;
     }
-    article {
-        display: flex;
-        justify-content: center;
-        
-    }
-    textarea {
-        letter-spacing: 1px;
-        font-family: 'Roboto', sans-serif;
-    }
+ 
     textarea {
         background-color: #E0DEF4;
         padding: 10px;
@@ -133,12 +127,7 @@ section {
         border: 2px solid #575279;
         width: 90%; 
     }
-    footer {
 
-        text-align: center;
-        font-family: 'Merriweather', serif;
-   
-    }
     main {
         display: flex;
         justify-content: space-between;
@@ -165,7 +154,7 @@ section {
         margin-right: 5px;
         
     }
-    .dark {
+    .light {
         background-color: #575279;
         
     }
